@@ -1,5 +1,5 @@
 // Copyright 2002-2011, University of Colorado
-package edu.colorado.phet.beerslawlab.common.view;
+package edu.colorado.phet.common.piccolophet.nodes;
 
 import java.awt.Image;
 
