@@ -1,3 +1,4 @@
+5/9/12 migrated HorizontalTiledNode to piccolo-phet
 5/9/12 rename TiledBackgroundNode to HorizontalTiledNode
 5/9/12 document workaround for WavelengthControl bounds issue
 5/9/12 minor documentation cleanup
